--- a/src/Components/page.module.css
+++ b/src/Components/page.module.css
@@ -8,19 +8,19 @@
     width: 100%;
 } */
 
-/* .footer{
+.footer{
     width: 50%;
     text-align: center;
     font-family: 'spa';
     font-weight: 300;
     color: #e0e0e0;
     font-size: 85%;
-} */
+}
 
-/* .footerflag{
+.footerflag{
     width: 50%;
     text-align: center;
-} */
+}
 
 .esp{
     font-family: spa;
